// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for AlgoliaInsights's productViewedEvents destination action: all fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "Product Viewed",
      "eventType": "view",
      "index": "og&DCP)aINw@qxe)",
      "objectID": "og&DCP)aINw@qxe)",
      "objectIDs": Array [
        "og&DCP)aINw@qxe)",
      ],
      "queryID": "og&DCP)aINw@qxe)",
      "timestamp": null,
      "userToken": "og&DCP)aINw@qxe)",
    },
  ],
}
`;

exports[`Testing snapshot for AlgoliaInsights's productViewedEvents destination action: required fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "Product Viewed",
      "eventType": "view",
      "index": "og&DCP)aINw@qxe)",
      "objectID": "og&DCP)aINw@qxe)",
      "objectIDs": Array [
        "og&DCP)aINw@qxe)",
      ],
      "queryID": "og&DCP)aINw@qxe)",
      "timestamp": 1674843786677,
      "userToken": "og&DCP)aINw@qxe)",
    },
  ],
}
`;
